Revert "create main page"
This reverts commit 01057a0dda5a40660256a45542b1fce7fe1a839f.

--- a/fma/src/main/resources/static/index.html
+++ b/fma/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>main</title>
+<title>index</title>
 </head>
 <body>
-main
+index
 </body>
 </html>
